--- a/style.css
+++ b/style.css
@@ -771,11 +771,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #42271b;
 }
 
 .tc-white {
-    color: #f1f1f1!important;
+    color: #f1f1f1!important
 }
 
 .btn-atomic-tangerine {
